# DFBU-DotFiles-Backup-Utility

./: .aider.conf.yml  .coverage  .gitignore  .mypy-strict-config.md  .pre-commit-config.yaml  AGENTS.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_QUICK.md  CHANGELOG_CONFIG_PERF.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION_CHECKLIST.md  DFBU-DotFiles-Backup-Utility.code-workspace  DOCUMENTATION_AUDIT_REPORT.md  ENHANCEMENT_SUMMARY.md  GUI_TESTING_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_2025-11-03.md  PROTECTION_STATUS.md  QUICKSTART.md  README.md  REFACTORING_ROADMAP.md  REFACTORING_SUMMARY.md  SECURITY.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_SUMMARY_2025-11-02.md  UI_DESIGN_GUIDE.md  UI_INTEGRATION_CHECKLIST.md  UI_INTEGRATION_SUMMARY.md  VALIDATION_INTEGRATION_SUMMARY.md  mypy.ini  pyproject.toml  setup-git-hooks.sh  setup.sh  test_backup_issue.py  test_comprehensive.py  test_force_full_final.py  test_gui_debug.py  test_gui_focused.py  (+5 more)
.agents/: PROTECTION_STATUS.md  PROTECTION_VERIFICATION.md  branch_protection.py  memory.instruction.md
.codex/: AGENTS.md
.contextstream/: config.json
.github/: AI_AGENT_RULES.md  BRANCH_PROTECTION_POLICY.md  GIT_HOOKS_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: architecture-diagram-syncer.agent.md  changelog-automator.agent.md  cicd-health-monitor.agent.md  code-review-assistant.agent.md  configuration-auditor.agent.md  dependency-guardian.agent.md  doc-curator.agent.md  documentation-curator.agent.md  graph-designer.agent.md  installation-documentation-bot.agent.md  issue-triager.agent.md  stale-content-curator.agent.md  test-coverage-shepherd.agent.md
.github/instructions/: cli-tool.instructions.md  desktop-application.instructions.md  library.instructions.md
.github/prompts/: README.md  arrange_code.prompt.md  cleanup.prompt.md  code-review.prompt.md  create-branch-protections.prompt.md  create-feature.prompt.md  create-model.prompt.md  create-service.prompt.md  create-ui.prompt.md  create-view.prompt.md  create-viewmodel.prompt.md  debug.prompt.md  diagnose-stuck-test.prompt.md  documentation.prompt.md  merge-to-main.prompt.md  merge_testing_to_main.prompt.md  refactor.prompt.md  release.prompt.md  test.prompt.md  venv-init.prompt.md  version-update.prompt.md
.github/workflows/: branch-protection-reminder.yml  ci.yml  conditional-automerge.yml  release.yml  type-check.yml
.roo/rules/: contextstream.md
DFBU/: .coverage  __init__.py  __main__.py  consolidate_config.py  dfbu-gui.py  dfbu.py  dfbu_gui.py  requirements.txt  validation.py
DFBU GUI/: desktop_main.py  dfbug.py
DFBU GUI/data/: dfbu-config.toml
DFBU GUI/docs/: CHANGELOG.md  PROJECT-DOC.md
DFBU GUI/src/: model.py  viewmodel.py
DFBU GUI/tests/: README.md  run_tests.py  test_actual_file_writing.py  test_backup_operations.py  test_config_backup.py  test_config_workflow.py  test_data_classes.py  test_dotfiles_bu.py  test_incremental_mirror.py  test_interactive_restore.py  test_model_config.py  test_model_core.py  test_model_dotfiles.py  test_real_backup_writing.py  test_restore_demo.py  test_restore_functionality.py  test_restore_operations.py  test_restore_workflow.py  test_utility_classes.py
DFBU/core/: __init__.py  common_types.py  migration.py  validation.py  yaml_config.py
DFBU/data/: .dfbuignore  dfbu-config.toml  dfbu-config_backup_20251031_153018.toml  dotfiles.yaml  library.yaml  session.yaml  settings.yaml
DFBU/docs/: ARCHITECTURE.md  CHANGELOG.md  GUI-CHANGELOG.md  GUI-PATH_CONFIGURATION_GUIDE.md  GUI-PROJECT-DOC.md  PROJECT-DOC.md  TESTING_EXPANSION_SUMMARY.md  TESTING_SUMMARY.md  VERSIONING_GUIDELINES.md
DFBU/gui/: __init__.py  backup_history.py  backup_orchestrator.py  config_manager.py  config_workers.py  constants.py  error_handler.py  file_operations.py  help_dialog.py  input_validation.py  logging_config.py  model.py  model_old_backup.py  preview_generator.py  profile_dialog.py  profile_manager.py  protocols.py  recovery_dialog.py  restore_backup_manager.py  size_analyzer.py  size_warning_dialog.py  statistics_tracker.py  theme.py  theme_loader.py  tooltip_manager.py  verification_manager.py  view.py  viewmodel.py
DFBU/src/: __init__.py
DFBU/tests/: README.md  __init__.py  conftest.py  test_actual_file_writing.py  test_actual_operations.py  test_backup_history.py  test_backup_operations.py  test_backup_orchestrator.py  test_backup_worker.py  test_browse_picker.py  test_cli_integration.py  test_cli_menu.py  test_common_types.py  test_config_editor.py  test_config_export.py  test_config_manager_yaml.py  test_config_tab_options.py  test_config_validation.py  test_config_workflow.py  test_data_classes.py  test_dfbu_cli.py  test_dialog_validation.py  test_dotfile_class.py  test_dotfiles_bu.py  test_error_handler.py  test_file_operations.py  test_gui_init.py  test_hide_missing.py  test_input_validation.py  test_logging_config.py  test_migration.py  test_model.py  test_model_additional_coverage.py  test_model_file_operations.py  test_multiple_paths.py  test_preview_generator.py  test_profile_dialog.py  test_profile_manager.py  test_real_backup_writing.py  test_recovery_dialog.py  (+24 more)
common_lib/: FILE_BACKUP_README.md  README.md  __init__.py  cust_class.py  file_backup.py  version.py
common_lib/docs/: CHANGELOG.md  PROJECT-DOC.md
common_lib/tests/: test_corruption_recovery.py  test_file_backup.py  test_perfmon.py  test_perfmon_comprehensive.py  test_perfmon_runner.py  test_simulations.py  test_verification.py
docs/: BRANCH_PROTECTION.md  BRANCH_PROTECTION_QUICK.md  CUSTOMIZATION_CHECKLIST.md  INDEX.md  PERFORMANCE_OPTIMIZATIONS.md  QT_PILOT_TESTING_NOTES.md  QUICKSTART_UI_UV.md  TROUBLESHOOTING.md
docs/plans/: 2026-01-31-production-readiness-design.md  2026-01-31-v0.6-pre-restore-safety.md  (+9 more)
packaging/: README.md  build-appimage.sh  com.l3digital.dfbu.appdata.xml  com.l3digital.dfbu.desktop  dfbu.spec
scripts/: README.md  format-markdown.sh  setup-branch-protection.sh  setup.sh  verify_test_setup.py
(+36 files in other folders)
